<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".ui.activity.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World Dagger2!"
        style="@style/TextAppearance.AppCompat.Headline"
        android:paddingBottom="40dp"
        android:textIsSelectable="false" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="User Name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText android:id="@+id/cityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cairo, Egypt"
            android:hint="City Full Name like 'Cairo, Egypt'" />

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btnShowInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        style="@style/TextAppearance.AppCompat.Caption"
        android:text="Show Info!" />

    <Button android:id="@+id/btnShowRepoList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        style="@style/TextAppearance.AppCompat.Caption"
        android:text="Show Repo List!" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text=""
        android:gravity="center"
        android:textSize="20sp"
        android:textIsSelectable="false" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</LinearLayout>
