<resources>
    <string name="app_name">DaggerSample</string>
    <string name="action_settings">Settings</string>
    <string name="username_empty_message">Empty user name</string>
    <string name="city_empty_message">Empty City</string>

    <string name="city_invalid_provided_message">Invalid City Provided!</string>

    <string name="repo_details">Google Repo Details</string>

    <!-- navigation drawer item labels  -->
    <string name="nav_item_main">Weather Now</string>
    <string name="nav_item_repo_list">Google Repo List</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="please_wait">Please wait</string>
    <string name="repo_details_ret_error">Unable to get Repo details!</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_repo_list</item>
        <item>@string/nav_item_main</item>
    </string-array>
</resources>
